# GeometricData

./: .gitignore  CMakeLists.txt  README.md  main.cpp
3DGeometry/: CMakeLists.txt  IArea.hpp  IVolume.hpp  face.hpp  object3d.hpp  vertex.cpp  vertex.hpp
Cube/: CMakeLists.txt  cube.cpp  cube.hpp
Parallelepiped/: CMakeLists.txt  Parallelepiped.cpp  Parallelepiped.hpp
Prism/: CMakeLists.txt  Prism.cpp  Prism.hpp
Pyramid/: CMakeLists.txt  Pyramid.cpp  Pyramid.hpp
TruncatedPyramid/: CMakeLists.txt  TruncatedPyramid.cpp  TruncatedPyramid.hpp
test_data/: cube1.txt  cube2.txt  cube3.txt  parallelepiped1.txt  parallelepiped2.txt  parallelepiped3.txt  prism.txt  pyramid1.txt  pyramid2.txt  pyramid3.txt  truncated_pyramid.txt
